language/move-lang/tests/move_check/parser/spec_parsing_range_fail.exp
error: 

   ┌── tests/move_check/parser/spec_parsing_range_fail.move:3:15 ───
   │
 3 │       let _ = 1 .. 2;
   │               ^^^^^^ `..` operator only allowed in specifications
   │

