language/move-lang/tests/move_check/parser/spec_parsing_range_fail.move
module M {
    fun range_in_prog(x: u64) {
      let _ = 1 .. 2;
    }
}
